# remote-communication-QT-AliCloud-

./: CMakeLists.txt  README.md
include/: chatinfo.hpp  db.hpp  server.hpp
src/: CMakeLists.txt  chatinfo.cpp  db.cpp  main.cpp  server.cpp
